# h9-external

./: .gitignore  .gitmodules  CMakeLists.txt  H9 External Example.maxpat  H9 External Playground.maxpat  README.md  h9_external.c  h9_external.cpp
examples/: H9 External Example.maxpat
